# Proyecto-Islas-de-Calor_2.0

./: Procesos de la app.txt  README.md  Script_islasdecalor_Adrian.js  Script_islasdecalor_Adrian.txt  links-útiles.txt  main.py  pyproject.toml  requirements.txt  test.json  trash.py
localidades_urbanas/: localidades_urbanas.dbf  localidades_urbanas.qmd  localidades_urbanas.shp  localidades_urbanas.shx
